--- a/viva.html
+++ b/viva.html
@@ -15,9 +15,10 @@
     <center>
         <h1>Olá mundo!</h1>
 
-        <p>
-            Seja bem vindo ao meu site!
-        </p>
+        <h2>
+            Seja bem vindo ao meu site! 
+        </h2>
+        <h3>Iremos aprender muito juntos</h3>
          
     </center>
 
